--- a/terraform/hetzner-cloud/modules/hcloud_server/user_data/cloud-config.production-instances.yml
+++ b/terraform/hetzner-cloud/modules/hcloud_server/user_data/cloud-config.production-instances.yml
@@ -9,4 +9,4 @@ users:
 runcmd:
   # Make yourself known to host
   - echo "Hello from cloud-config.production-instances.yml!" > ~/hello_world.txt
-  - ip route add default via 172.24.1.4 # NAT Gateway IPV4 in fiscalismia-private-production-network
+  - ip route add default via 172.24.0.1 # Subnet Gateway IPV4 of subnet_private_class_b_production_isolated
