--- a/terraform/hetzner-cloud/modules/hcloud_server/user_data/cloud-config.production-instances.yml
+++ b/terraform/hetzner-cloud/modules/hcloud_server/user_data/cloud-config.production-instances.yml
@@ -27,7 +27,22 @@ write_files:
     append: true
 
 runcmd:
-  # Make yourself known to host
-  - echo "Hello from cloud-config.production-instances.yml!" > ~/hello_world.txt
-  # reboot the server for DNS changes to take effect
+  # Initialize logfile
+  - export logfile="/root/cloud-config.log"
+  - echo "Hello from cloud-config.production-instances.yml!" > ${logfile}
+  # Configure Fail2Ban to protect sshd
+  - echo "[sshd]\nenabled = true" > /etc/fail2ban/jail.local
+  - systemctl enable --now fail2ban
+  - printf "\nFail2Ban SSHD Config:" >> ${logfile}
+  - cat /etc/fail2ban/jail.local >> ${logfile}
+  - printf "\nsystemctl status of fail2ban:"
+  - systemctl is-active fail2ban >> ${logfile} 2>&1
+  # list NetworkManager Config
+  - printf "\nNetworkManager Dispatcher Config is:" >> ${logfile}
+  - cat /etc/NetworkManager/dispatcher.d/ifup-local >> ${logfile}
+  # list systemd DNS Config
+  - printf "\nsystemd DNS config:"
+  - cat /etc/systemd/resolved.conf >> ${logfile}
+  # reboots server for network config to take effect
+  - printf "\nRebooting server..." >> ${logfile}
   - reboot
