--- a/terraform/hetzner-cloud/modules/hcloud_server/user_data/cloud-config.default.yml
+++ b/terraform/hetzner-cloud/modules/hcloud_server/user_data/cloud-config.default.yml
@@ -9,3 +9,4 @@ users:
 runcmd:
   # Make yourself known to host
   - echo "Hello from cloud-config.default.yml!" > ~/hello_world.txt
+  - who >> ~/hello_world.txt
