--- a/terraform/hetzner-cloud/modules/hcloud_server/user_data/cloud-config.nat-gateway.yml
+++ b/terraform/hetzner-cloud/modules/hcloud_server/user_data/cloud-config.nat-gateway.yml
@@ -27,33 +27,42 @@ write_files:
 
       # subnet_private_class_b_demo_isolated
       iptables -t nat -A POSTROUTING -s '172.20.0.0/30' -o eth0 -j MASQUERADE
+      iptables -t nat -I POSTROUTING -s '172.20.0.0/30' -j LOG --log-prefix "NAT-GW DEMO_ISOLATED: "
 
       # subnet_private_class_b_production_isolated
       iptables -t nat -A POSTROUTING -s '172.24.0.0/28' -o eth0 -j MASQUERADE
+      iptables -t nat -I POSTROUTING -s '172.24.0.0/28' -j LOG --log-prefix "NAT-GW PROD_ISOLATED: "
 
       # subnet_private_class_b_production_exposed
       iptables -t nat -A POSTROUTING -s '172.24.1.0/29' -o eth0 -j MASQUERADE
+      iptables -t nat -I POSTROUTING -s '172.24.1.0/29' -j LOG --log-prefix "NAT-GW PROD_EXPOSED : "
+
+      # Entire Class B Block Log all New Connections	172.16.0.0 - 172.31.255.255
+      iptables -t nat -I POSTROUTING -m conntrack --ctstate NEW -s '172.16.0.0/12' -j LOG --log-prefix "NAT NEW_CLASS_B_CIDR: "
+
+      # Entire Class B Block Log all New Connections	172.16.0.0 - 172.31.255.255
+      iptables -t nat -I POSTROUTING -m conntrack --ctstate NEW -s '0.0.0.0/0' -j LOG --log-prefix "NAT NEW_ENTIRE_CIDR : "
     permissions: '0755'
 
 runcmd:
   # Initialize logfile
   - export logfile="/root/cloud-config.log"
   - echo "Hello from cloud-config.nat-gateway.yml!" > ${logfile}
-  - who >> ${logfile}
+  - date >> ${logfile}
   # Configure Fail2Ban to protect sshd
-  - echo "[sshd]\nenabled = true" > /etc/fail2ban/jail.local
+  - printf "[sshd]\nenabled = true" > /etc/fail2ban/jail.local
   - systemctl enable --now fail2ban
-  - printf "\n###Fail2Ban SSHD Config:\n" >> ${logfile}
+  - printf "\n# Fail2Ban SSHD Config:\n" >> ${logfile}
   - cat /etc/fail2ban/jail.local >> ${logfile}
-  - printf "\n###systemctl status of fail2ban:\n" >> ${logfile}
+  - printf "\n# systemctl status of fail2ban:\n" >> ${logfile}
   - systemctl is-active fail2ban >> ${logfile} 2>&1
   # Tests iptables installation
-  - printf "\n###iptables location is:" >> ${logfile}
+  - printf "\n# iptables location is:\n" >> ${logfile}
   - which iptables >> ${logfile} 2>&1
   # list NetworkManager Config
-  - printf "\n###NetworkManager Dispatcher Config is:\n" >> ${logfile}
+  - printf "\n# NetworkManager Dispatcher Config is:\n" >> ${logfile}
   - cat /etc/NetworkManager/dispatcher.d/ifup-local >> ${logfile}
   # reboots server for network config to take effect
-  - printf "\n###Rebooting server...\n" >> ${logfile}
+  - printf "\n# Rebooting server...\n" >> ${logfile}
   - date >> ${logfile}
   - reboot
