--- a/terraform/hetzner-cloud/modules/hcloud_server/user_data/cloud-config.bastion-host.yml
+++ b/terraform/hetzner-cloud/modules/hcloud_server/user_data/cloud-config.bastion-host.yml
@@ -17,13 +17,13 @@ runcmd:
   - export logfile="/root/cloud-config.log"
   - echo "Hello from cloud-config.bastion-host.yml!" > $logfile
   - date >> $logfile
-  ########################### TEMPORARY HTTPS INTERNET ACCESS #####################################################
+  ########################### TEMPORARY HTTPS INTERNET ACCESS ###########################
   # wait for nat gateway to initialize
-  - printf "\n# Sleeping for 15 minutes to wait for NAT-Gateway cloud-init\n" >> $logfile
-  - sleep 900 # 15 minutes
+  - printf "\n# Sleeping to wait for NAT-Gateway cloud-init\n" >> $logfile
+  - sleep 600 # 10 minutes
   - printf "\n# Running NAT Gateway setup script\n" >> $logfile
-  - /root/scripts/nat_gw_egresss_setup.sh >> $logfile 2>&1
-  #################################################################################################################
+  - /root/scripts/nat_gw_egresss_setup.sh ${PRIVATE_IP_TO_NAT} >> $logfile 2>&1
+  ######################################################################################
   # Configure Fail2Ban to protect sshd
   - dnf install fail2ban -y
   - |
